[package]
name = "xerberus"
version = "0.1.0"
edition = "2018"
authors = ["Pan Chasinga"]

[dependencies]
rand_core = { version = "0.6", features = ["std", "getrandom"] }
getrandom = "0.2"
to-binary = "0.4"
hex = "0.4.3"
ring = "^0.16"
anyhow = "^1.0"
thiserror = "^1.0"
secp256k1 = { version = "^0.20", features = ["bitcoin_hashes"] }
lazy_static = "1.4.0"
base58 = "^0.1"